Make Swagger UI Access Configurable for Public or Restricted Use