@@ -1,17 +1,6 @@
 package com.adityachandel.booklore.config.security;
 
-import com.adityachandel.booklore.service.appsettings.AppSettingService;
-import com.nimbusds.jose.JWSAlgorithm;
-import com.nimbusds.jose.jwk.source.JWKSource;
-import com.nimbusds.jose.jwk.source.RemoteJWKSet;
-import com.nimbusds.jose.proc.JWSKeySelector;
-import com.nimbusds.jose.proc.JWSVerificationKeySelector;
-import com.nimbusds.jose.proc.SecurityContext;
-import com.nimbusds.jose.util.DefaultResourceRetriever;
-import com.nimbusds.jwt.JWTClaimsSet;
-import com.nimbusds.jwt.proc.ConfigurableJWTProcessor;
-import com.nimbusds.jwt.proc.DefaultJWTProcessor;
-import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.Order;
@@ -26,20 +15,17 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 
-import java.net.URI;
-import java.net.URL;
 import java.util.Collections;
-import java.util.Date;
 import java.util.List;
 
 @Slf4j
 @Component
 @Order(Ordered.HIGHEST_PRECEDENCE + 99)
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class WebSocketAuthInterceptor implements ChannelInterceptor {
 
     private final JwtUtils jwtUtils;
-    private final AppSettingService appSettingService;
+    private final OidcTokenValidator oidcTokenValidator;
 
     @Override
     public Message<?> preSend(Message<?> message, MessageChannel channel) {
@@ -53,7 +39,7 @@ public class WebSocketAuthInterceptor implements ChannelInterceptor {
                 throw new IllegalArgumentException("Missing Authorization header");
             }
 
-            String token = authHeaders.get(0).replace("Bearer ", "");
+            String token = authHeaders.getFirst().replace("Bearer ", "");
             Authentication auth = authenticateToken(token);
 
             if (auth == null) {
@@ -71,41 +57,13 @@ public class WebSocketAuthInterceptor implements ChannelInterceptor {
     private Authentication authenticateToken(String token) {
         if (jwtUtils.validateToken(token)) {
             String username = jwtUtils.extractUsername(token);
-            List<SimpleGrantedAuthority> authorities = Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
-            return new UsernamePasswordAuthenticationToken(username, null, authorities);
+            return new UsernamePasswordAuthenticationToken(
+                    username,
+                    null,
+                    Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))
+            );
         }
 
-        if (appSettingService.getAppSettings().isOidcEnabled()) {
-            try {
-                var providerDetails = appSettingService.getAppSettings().getOidcProviderDetails();
-                String jwksUrl = providerDetails.getJwksUrl();
-                if (jwksUrl == null || jwksUrl.isEmpty()) {
-                    log.error("JWKS URL is not configured");
-                    return null;
-                }
-
-                URL jwksURL = new URI(jwksUrl).toURL();
-                DefaultResourceRetriever resourceRetriever = new DefaultResourceRetriever(2000, 2000);
-                JWKSource<SecurityContext> jwkSource = new RemoteJWKSet<>(jwksURL, resourceRetriever);
-                ConfigurableJWTProcessor<SecurityContext> jwtProcessor = new DefaultJWTProcessor<>();
-                JWSKeySelector<SecurityContext> keySelector = new JWSVerificationKeySelector<>(JWSAlgorithm.RS256, jwkSource);
-                jwtProcessor.setJWSKeySelector(keySelector);
-
-                JWTClaimsSet claimsSet = jwtProcessor.process(token, null);
-                Date expirationTime = claimsSet.getExpirationTime();
-                if (expirationTime == null || expirationTime.before(new Date())) {
-                    log.warn("OIDC token is expired or missing exp claim");
-                    return null;
-                }
-                return new UsernamePasswordAuthenticationToken("oidc-user", null, Collections.emptyList());
-
-            } catch (Exception e) {
-                log.error("OIDC token validation failed", e);
-                return null;
-            }
-        }
-
-        // If not OIDC-enabled, return null (or could throw an error depending on the requirement)
-        return null;
+        return oidcTokenValidator.validate(token);
     }
 }
